arm32v7-steve72/templates/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: steve72-ui-service
spec:
  selector:
    app: steve72-ui
  ports:
    - protocol: TCP
      port: 8080
